New layout for hoem and about

--- a/pages/about.html
+++ b/pages/about.html
@@ -3,9 +3,10 @@
     <head>
         <title>About Me</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans"
+            rel="stylesheet">
         <link type="text/css" href="../css/styles.css" rel="stylesheet">
-        <!-- <link type="text/css" href="../css/styles-about.css" rel="stylesheet"> -->
+        <link type="text/css" href="../css/styles-about.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -22,7 +23,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
-<!--                    <li><a href="experiment.html">Experiment</a></li>-->
+                    <!--                    <li><a href="experiment.html">Experiment</a></li>-->
                 </ul>
             </nav>
         </header>
@@ -32,149 +33,205 @@
                     <h2>Work Experience</h2>
                     <ul>
                         <li>
-                            <h3>Company 1</h3>
-                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                            <p>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em></p>
+                            <h3>UC San Diego</h3>
+                            <p><strong>Math Course Reader/Grader</strong></p>
+                            <p><i>Oct. 2023 - Present</i></p>
+                            <ul>
+                                <li>FA23: A MATH upper division course</li>
+                                <li>Grade homework and provide feedbacks for
+                                    200+ students.</li>
+                            </ul>
                         </li>
                         <li>
-                            <h3>Company 2</h3>
-                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                            <p>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em></p>
+                            <h3>UC San Diego</h3>
+                            <p><strong>Advancement Data and Business
+                                    Intelligence Student Assistant</strong></p>
+                            <p><i>Sept. 2023 - Present</i></p>
+                            <p>Working on the embedded data and reporting team
+                                that supports the university's fundraising
+                                department.<br>
+                                Work on data maintenance tasks such as:
+                                <ul>
+                                    <li>Managing a large number of constituent
+                                        update requests and maintenance tasks.</li>
+                                    <li>Organizing, maintaining, and working
+                                        through various exception reports.</li>
+                                    <li>Standardizing and implementing
+                                        standardizations to current data and
+                                        processes .</li>
+                                    <li>Other system and data tasks as assigned.</li>
+                                </ul>
+                            </p>
                         </li>
                         <li>
-                            <h3>Company 3</h3>
-                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                            <p>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em></p>
+                            <h3>Walmart Global Technology</h3>
+                            <p><strong>Software Engineer II Intern</strong></p>
+                            <p><i>June 2023 - Aug. 2023</i></p>
+                            <p>Worked at the Measurement and Reporting team in
+                                Display Advertising.</p>
+                            <p>Tools: <strong>Python</strong>, <strong>SQL</strong>,
+                                <strong>Google BigQuery</strong>, <strong>Java</strong>,
+                                and <strong>Tableau</strong></p>
                         </li>
                         <li>
-                            <h3>Company 4</h3>
-                            <p><strong>position</strong>&nbsp;<i>2022-2023</i></p>
-                            <p>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em>Description and duties, use <em><strong>Java</strong></em>
-                                and <em><strong>Python</strong></em></p>
+                            <h3>UC San Diego</h3>
+                            <p><strong>Advancement Data and Business
+                                    Intelligence Student Assistant</strong></p>
+                            <p><i>Nov. 2022 - June 2023</i></p>
+                            <p>Worked on the embedded data and reporting team
+                                that supports the university's fundraising
+                                department.<br>
+                                Worked on data maintenance tasks such as:
+                                <ul>
+                                    <li>Managed a large number of constituent
+                                        update requests and maintenance tasks.</li>
+                                    <li>Organized, maintained, and worked
+                                        through various exception reports.</li>
+                                    <li>Standardized and implemented
+                                        standardizations to current data and
+                                        processes .</li>
+                                    <li>Other system and data tasks as assigned.</li>
+                                </ul>
+                            </p>
+                        </li>
+                        <li>
+                            <h3>UC San Diego</h3>
+                            <p><strong>Advancement Data and Business
+                                    Intelligence Student Assistant</strong></p>
+                            <p><i>Nov. 2022 - June 2023</i></p>
+                            <p>Worked on the embedded data and reporting team
+                                that supports the university's fundraising
+                                department.<br>
+                                Worked on data maintenance tasks such as:
+                                <ul>
+                                    <li>Managed a large number of constituent
+                                        update requests and maintenance tasks.</li>
+                                    <li>Organized, maintained, and worked
+                                        through various exception reports.</li>
+                                    <li>Standardized and implemented
+                                        standardizations to current data and
+                                        processes .</li>
+                                    <li>Other system and data tasks as assigned.</li>
+                                </ul>
+                            </p>
+                        </li>
+                        <li>
+                            <h3>UC San Diego</h3>
+                            <p><strong>Math Course Reader/Grader</strong></p>
+                            <p><i>Oct. 2022 - March 2023</i></p>
+                            <ul>
+                                <li>FA22/WI23: MATH 11 - Calculus-Based
+                                    Introductory Probability and Statistics</li>
+                                <li>Grade homework and provide feedbacks for
+                                    200+ students.</li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
+                <hr />
                 <div class="resume">
                     <p>Click the button below to download my resume.</p>
-                    <iframe src="../documents/Xuewen_Yang_Resume.pdf"
+                    <!-- <iframe src="../documents/Xuewen_Yang_Resume.pdf"
                         title="Resume"></iframe>
-                    <br><br>
-                    <a href="../documents/Xuewen_Yang_Resume.pdf" download="Xuewen_Yang_Resume.pdf" class="download-button">Download Resume</a>
+                    <br><br> -->
+                    <a href="../documents/Xuewen_Yang_Resume.pdf"
+                        target="Xuewen_Yang_Resume.pdf" class="download-button">Download
+                        Resume</a>
                 </div>
+                <hr />
             </section>
             <section class="skills">
                 <h2>Skills</h2>
-                <div class="tables">
-                    <table>
-                        <caption>Technical Skills</caption>
-                        <!-- <colgroup>
-                            <col style="width: 50%;">
-                            <col style="width: 50%;">
-                        </colgroup> -->
-                        <thead>
-                            <tr>
-                                <th>Skill</th>
-                                <th>Proficiency</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Python</td>
-                                <td>Advanced</td>
-                            </tr>
-                            <tr>
-                                <td>Java</td>
-                                <td>Intermediate</td>
-                            </tr>
-                            <tr>
-                                <td>SQL</td>
-                                <td>Advanced</td>
-                            </tr>
-                            <tr>
-                                <td>C</td>
-                                <td>Intermediate</td>
-                            </tr>
-                            <tr>
-                                <td>Tableau</td>
-                                <td>Advanced</td>
-                            </tr>
-                            <tr>
-                                <td>HTML</td>
-                                <td>Intermediate</td>
-                            </tr>
-                            <tr>
-                                <td>CSS</td>
-                                <td>Advanced</td>
-                            </tr>
-                            <tr>
-                                <td>JavaScript</td>
-                                <td>Intermediate</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <br>
-                    <table>
-                        <caption>Speaking Languages</caption>
-                        <!-- <colgroup>
-                            <col style="width: 60%;">
-                            <col style="width: 40%;">
-                        </colgroup> -->
-                        <thead>
-                            <tr>
-                                <th>Language</th>
-                                <th>Proficiency</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Chinese (Mandarin) </td>
-                                <td>Native</td>
-                            </tr>
-                            <tr>
-                                <td>Chinese (Cantonese) </td>
-                                <td>Native</td>
-                            </tr>
-                            <tr>
-                                <td>English</td>
-                                <td>Professional</td>
-                            </tr>
-                            <tr>
-                                <td>Korean</td>
-                                <td>Elementary</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="skills-container">
+                    <div class="tech-skills">
+                        <h3>Technical Skills</h3>
+                        <div class="skill">
+                            <p>Python</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent90">90%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>Java</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent85">85%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>SQL</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent90">90%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>C</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent60">60%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>Tableau</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent80">80%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>HTML</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent70">70%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>CSS</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent70">70%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>JavaScript</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent50">50%</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="soft-skills">
+                        <h3>Soft Skills</h3>
+                        <div class="skill">
+                            <p>Chinese (Mandarin)</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent100">100%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>Chinese (Cantonese)</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent100">100%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>English</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent80">80%</div>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <p>Korean</p>
+                            <div class="skill-bar">
+                                <div class="skill-level percent20">20%</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
 
         <footer>
             <div id="footer-logo">
-                <a href="https://www.linkedin.com/in/xuewen-daphne-yang/" target="_blank"><img src="../media/linkedin-icon.png" alt="linkedin profile"></a>
-                <a href="https://github.com/daphneyyy" target="_blank"><img src="../media/github-icon.png" alt="github profile"></a>
+                <a href="https://www.linkedin.com/in/xuewen-daphne-yang/"
+                    target="_blank"><img src="../media/linkedin-icon.png"
+                        alt="linkedin profile"></a>
+                <a href="https://github.com/daphneyyy" target="_blank"><img
+                        src="../media/github-icon.png" alt="github profile"></a>
             </div>
             <span>&copy; 2023 Xuewen Yang</span>
         </footer>
