--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
         </label>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="pages/about.html">About</a></li>
-                <li><a href="pages/projects.html">Projects</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
-<!--                <li><a href="pages/experiment.html">Experiment</a></li>-->
+                <li><a href="index.html" class="nav-home">Home</a></li>
+                <li><a href="/pages/about.html" class="nav-about">About</a></li>
+                <li><a href="/pages/projects.html" class="nav-project">Projects</a></li>
+                <li><a href="/pages/contact.html" class="nav-contact">Contact</a></li>
             </ul>
         </nav>
     </header>
