--- a/pages/about.html
+++ b/pages/about.html
@@ -19,11 +19,10 @@
             </label>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <!--                    <li><a href="experiment.html">Experiment</a></li>-->
+                    <li><a href="../index.html" class="nav-home">Home</a></li>
+                    <li><a href="about.html" class="nav-about">About</a></li>
+                    <li><a href="projects.html" class="nav-project">Projects</a></li>
+                    <li><a href="contact.html" class="nav-contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
