--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,13 +27,13 @@
     </header>
 
     <main>
-        <details id="contact_info">
+        <details class="contact_info">
             <summary>Contact Information</summary>
             <p>Email: xuy001@ucsd.edu</p>
             <p>Email: xuewenyang1@gmail.com</p>
         </details>
         <form action="#">
-            <fieldset id="contact_form">
+            <fieldset class="contact_form">
                 <legend><b>Contact Form</b></legend>
                 <label for="first_name">First name:</label>
                 <input type="text" id="first_name" name="first_name"><br><br>
@@ -41,7 +41,7 @@
                 <input type="text" id="last_name" name="last_name"><br><br>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required><br><br>
-                <label for="email">You are a:</label>
+                <label for="occupation">Occupation:</label>
                 <select id="occupation" name="occupation">
                     <optgroup label="Academic">
                         <option value="student">student</option>
@@ -53,7 +53,9 @@
                     <optgroup label="Other">
                         <option value="other">friend :)</option>
                     </optgroup>
-                </select> of <input type="text" placeholder="affiliation"><br><br>
+                </select><br><br>
+                <label for="occupation">Affiliation:</label>
+                <input type="text"><br><br>
                 <label for="message">Message:</label><br>
                 <textarea id="message" name="message" rows="5" cols="30" required></textarea><br><br>
                 <button type="submit">Submit</button>
